charon/tests/ui/unsupported/well-formedness-bound.out
error: Well-formedness clauses are unsupported
 --> tests/ui/unsupported/well-formedness-bound.rs:4:5
  |
4 |     &'a ():,
  |     ^^^^^^

error: Ignoring the following item due to an error: test_crate::get
 --> tests/ui/unsupported/well-formedness-bound.rs:2:1
  |
2 | / fn get<'a>(x: &'a u32) -> Option<&'a u32>
3 | | where
4 | |     &'a ():,
  | |____________^

error: aborting due to 2 previous errors

ERROR Compilation encountered 2 errors
